# sdu-cs-human-resource-management-system-project

./: .gitignore  CASE工具调研.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SRS草稿.md  auditlog.sql  changepassworddialog.cpp  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serversettingsdialog.cpp  serversettingsdialog.h  style.qss  test2  可行性分析报告.md  实验四.md
.claude/: settings.local.json
common/: Logger.cpp
docs/: CASE工具调研.md  CLAUDE.md  README.md  SAD初稿.md  SAD正式稿.md  SRS正式稿.md  SRS草稿.md  体系结构风格评分与最佳选择.md  可行性分析报告.md  实验四.md  答辩应对指南.md  项目进度与工作跟踪表.md
src/: main.cpp
src/core/: Constants.h  GlobalEvents.cpp  GlobalEvents.h  Logger.cpp  Logger.h  SessionManager.cpp  SessionManager.h
src/db/: DbConnection.cpp  DbConnection.h  DbMigration.cpp  DbMigration.h  DbSchema.cpp  DbSchema.h
src/services/: ApprovalService.cpp  ApprovalService.h  AttendanceService.cpp  AttendanceService.h  AuditService.cpp  AuditService.h  AuthService.cpp  AuthService.h  EmployeeService.cpp  EmployeeService.h  NotificationService.cpp  NotificationService.h  OrgService.cpp  OrgService.h  PayrollCalculator.h  PayrollService.cpp  PayrollService.h  PerformanceService.cpp  PerformanceService.h  ProfileChangeService.cpp  ProfileChangeService.h  RbacService.cpp  RbacService.h
src/tabs/: AttendManageTab.cpp  AttendManageTab.h  AttendTaxTab.cpp  AttendTaxTab.h  AuditTab.cpp  AuditTab.h  DashboardTab.cpp  DashboardTab.h  EmployeeTab.cpp  EmployeeTab.h  LeaveTab.cpp  LeaveTab.h  MyAttendanceTab.cpp  MyAttendanceTab.h  OrgTab.cpp  OrgTab.h  PayrollTab.cpp  PayrollTab.h  PerformanceTab.cpp  PerformanceTab.h  ProfileChangeTab.cpp  ProfileChangeTab.h  RbacTab.cpp  RbacTab.h  ReportsTab.cpp  ReportsTab.h
src/tabs/attend_manage/: AttendApprovalWidget.cpp  AttendApprovalWidget.h  AttendBoardWidget.cpp  AttendBoardWidget.h  ShiftSettingsWidget.cpp  ShiftSettingsWidget.h
src/tabs/my_attendance/: AppCenterWidget.cpp  AppCenterWidget.h  DailyClockWidget.cpp  DailyClockWidget.h
src/tabs/performance/: PerformanceDrawer.cpp  PerformanceDrawer.h
src/ui/: ChangePasswordDialog.cpp  ChangePasswordDialog.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RecoverPasswordDialog.cpp  RecoverPasswordDialog.h  ServerSettingsDialog.cpp
src/utils/: CsvExport.cpp  CsvExport.h  DbQuery.h  DbUtils.cpp  DbUtils.h  MessageHelper.h  SqlFilterBuilder.h  Toast.h  UiStyles.cpp  UiStyles.h  UnsavedChangesGuard.h
src/widgets/: ComboDelegate.cpp  ComboDelegate.h  CommonDelegates.cpp  CommonDelegates.h  OptimisticSqlTableModel.cpp  OptimisticSqlTableModel.h  OrgChartView.cpp  OrgChartView.h  PaginationBar.cpp  PaginationBar.h  SafeEditDelegate.h  TaxConfigPanel.cpp  TaxConfigPanel.h
tabs/: AttendTaxTab.cpp  AttendTaxTab.h  DashboardTab.cpp  DashboardTab.h  EmployeeTab.cpp  EmployeeTab.h  LeaveTab.cpp  LeaveTab.h  OrgTab.cpp  PayrollTab.cpp  PerformanceTab.cpp  ProfileChangeTab.cpp  ProfileChangeTab.h  ReportsTab.cpp  ReportsTab.h
widgets/: PaginationBar.cpp
